ci: update compile commands

--- a/.github/workflows/build_gcc_windows.yml
+++ b/.github/workflows/build_gcc_windows.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build JuleC
         run: |
           .\bin\julec -t --compiler gcc src/julec
-          g++ -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing "-Wa,-mbig-obj" -o test.exe dist/ir.cpp -lws2_32 -lshell32
+          g++ "-Wa,-mbig-obj" -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test.exe dist/ir.cpp -lws2_32 -lshell32 -liphlpapi
