--- a/.github/workflows/build_gcc_macos.yml
+++ b/.github/workflows/build_gcc_macos.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build JuleC
         run: |
           julec --compiler gcc --compiler-path g++-13 -t src/julec
-          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic dist/ir.cpp
+          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing dist/ir.cpp
