--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -14,180 +14,150 @@ jobs:
 
       - name: Test - std/bufio
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/bufio
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/bufio
           ./test
 
       - name: Test - std/bytes
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/bytes
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/bytes
           ./test
 
       - name: Test - std/conv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/conv/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/conv/test
           ./test
 
       - name: Test - std/internal/byteslite
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/byteslite/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/internal/byteslite/test
           ./test
 
       - name: Test - std/internal/conv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/internal/conv/test
           ./test
 
       - name: Test - std/encoding/ascii85
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/ascii85
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/encoding/ascii85
           ./test
 
       - name: Test - std/encoding/base32
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/base32
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/encoding/base32
           ./test
 
       - name: Test - std/encoding/base64
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/base64
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/encoding/base64
           ./test
 
       - name: Test - std/encoding/csv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/csv
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/encoding/csv
           ./test
 
       - name: Test - std/encoding/json
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/json
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/encoding/json
           ./test
 
       - name: Test - std/hash/adler32
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/hash/adler32
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/hash/adler32
           ./test
 
       - name: Test - std/hash/fnv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/hash/fnv
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/hash/fnv
           ./test
 
       - name: Test - std/html
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/html
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/html
           ./test
 
       - name: Test - std/io
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/io/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/io/test
           ./test
 
       - name: Test - std/jule/constant/lit
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/jule/constant/lit
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/jule/constant/lit
           ./test
 
       - name: Test - std/jule/sema
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/jule/sema
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/jule/sema
           ./test
 
       - name: Test - std/maps
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/maps
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/maps
           ./test
 
       - name: Test - std/math
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/math/test
           ./test
 
       - name: Test - std/math/big
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/big
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/math/big
           ./test
 
       - name: Test - std/math/bits
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/bits/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/math/bits/test
           ./test
 
       - name: Test - std/math/cmplx
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/cmplx
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/math/cmplx
           ./test
 
       - name: Test - std/net
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/net
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/net
           ./test
 
       - name: Test - std/net/url
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/net/url
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/net/url
           ./test
 
       - name: Test - std/path
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/path
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/path
           ./test
 
       - name: Test - std/slices
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/slices
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/slices
           ./test
 
       - name: Test - std/strings
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/strings/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/strings/test
           ./test
 
       - name: Test - std/sync
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/sync/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/sync/test
           ./test
 
       - name: Test - std/time
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/time/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/time/test
           ./test
 
       - name: Test - std/unicode/utf8
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/unicode/utf8/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/unicode/utf8/test
           ./test
 
       - name: Test - std/unicode/utf16
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/unicode/utf16/test
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec test --compiler gcc --compiler-path g++-13 -o test std/unicode/utf16/test
           ./test
