--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -14,113 +14,94 @@ jobs:
 
       - name: Test - Standard Library
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/std
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/std
           ./test
 
       - name: Test - Aliasing
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/aliasing
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/aliasing
           ./test
 
       - name: Test - Arrays
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/arrays
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/arrays
           ./test
 
       - name: Test - Basic Calculator
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/basic_calculator
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/basic_calculator
 
       - name: Test - Channels
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/channels
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/channels
           ./test
 
       - name: Test - Cmplx
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/cmplx
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/cmplx
           ./test
 
       - name: Test - Comptime
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/comptime
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/comptime
           ./test
 
       - name: Test - Concurrency
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/concurrency
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/concurrency
           ./test
 
       - name: Test - Dynamic
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/dynamic
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/dynamic
           ./test
 
       - name: Test - Enum
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/enum
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/enum
           ./test
 
       - name: Test - Exceptionals
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/exceptionals
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/exceptionals
           ./test
 
       - name: Test - Generics
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/generics
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/generics
           ./test
 
       - name: Test - Levenshtein Distance
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/levenshtein_distance
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/levenshtein_distance
           ./test
 
       - name: Test - Maps
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/maps
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/maps
           ./test
 
       - name: Test - QuickSort
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/quicksort
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/quicksort
           ./test
 
       - name: Test - Sleep
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/sleep
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/sleep
           ./test
 
       - name: Test - Syntax
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/syntax
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/syntax
           ./test
 
       - name: Test - Traits
         run: |
-          julec --compiler gcc --compiler-path g++-13 -o test -t tests/traits
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -o test tests/traits
           ./test
 
       - name: Test - Wrap Around
         run: |
-          julec --compiler gcc --compiler-path g++-13 -po test -t tests/wraparound
-          g++-13 -Wl,-ld_classic -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fexcess-precision=standard -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test dist/ir.cpp
+          julec --compiler gcc --compiler-path g++-13 -po test tests/wraparound
           ./test
