--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Test - Standard Library
         run: |
           .\bin\julec --compiler gcc -to test tests/std
-          g++ "-Wa,-mbig-obj" -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test.exe dist/ir.cpp -lws2_32 -lshell32 -liphlpapi
+          g++ "-Wa,-mbig-obj" -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test.exe dist/ir.cpp -lws2_32 -lshell32 -liphlpapi -lsynchronization
           ./test
 
       - name: Test - Aliasing
