ci: update build commands

--- a/.github/workflows/build_clang_windows.yml
+++ b/.github/workflows/build_clang_windows.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Build JuleC
         run: |
-          .\bin\julec --compiler clang src/julec
+          .\bin\julec build --compiler clang src/julec
