--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -14,94 +14,94 @@ jobs:
 
       - name: Test - Standard Library
         run: |
-          .\bin\julec --compiler clang -o test tests/std
+          .\bin\julec build --compiler clang -o test tests/std
           ./test
 
       - name: Test - Aliasing
         run: |
-          .\bin\julec --compiler clang -o test tests/aliasing
+          .\bin\julec build --compiler clang -o test tests/aliasing
           ./test
 
       - name: Test - Arrays
         run: |
-          .\bin\julec --compiler clang -o test tests/arrays
+          .\bin\julec build --compiler clang -o test tests/arrays
           ./test
 
       - name: Test - Basic Calculator
         run: |
-          .\bin\julec --compiler clang -o test tests/basic_calculator
+          .\bin\julec build --compiler clang -o test tests/basic_calculator
 
       - name: Test - Channels
         run: |
-          .\bin\julec --compiler clang -o test tests/channels
+          .\bin\julec build --compiler clang -o test tests/channels
           ./test
 
       - name: Test - Cmplx
         run: |
-          .\bin\julec --compiler clang -o test tests/cmplx
+          .\bin\julec build --compiler clang -o test tests/cmplx
           ./test
 
       - name: Test - Comptime
         run: |
-          .\bin\julec --compiler clang -o test tests/comptime
+          .\bin\julec build --compiler clang -o test tests/comptime
           ./test
 
       - name: Test - Concurrency
         run: |
-          .\bin\julec --compiler clang -o test tests/concurrency
+          .\bin\julec build --compiler clang -o test tests/concurrency
           ./test
 
       - name: Test - Dynamic
         run: |
-          .\bin\julec --compiler clang -o test tests/dynamic
+          .\bin\julec build --compiler clang -o test tests/dynamic
           ./test
 
       - name: Test - Enum
         run: |
-          .\bin\julec --compiler clang -o test tests/enum
+          .\bin\julec build --compiler clang -o test tests/enum
           ./test
 
       - name: Test - Exceptionals
         run: |
-          .\bin\julec --compiler clang -o test tests/exceptionals
+          .\bin\julec build --compiler clang -o test tests/exceptionals
           ./test
 
       - name: Test - Generics
         run: |
-          .\bin\julec --compiler clang -o test tests/generics
+          .\bin\julec build --compiler clang -o test tests/generics
           ./test
 
       - name: Test - Levenshtein Distance
         run: |
-          .\bin\julec --compiler clang -o test tests/levenshtein_distance
+          .\bin\julec build --compiler clang -o test tests/levenshtein_distance
           ./test
 
       - name: Test - Maps
         run: |
-          .\bin\julec --compiler clang -o test tests/maps
+          .\bin\julec build --compiler clang -o test tests/maps
           ./test
 
       - name: Test - QuickSort
         run: |
-          .\bin\julec --compiler clang -o test tests/quicksort
+          .\bin\julec build --compiler clang -o test tests/quicksort
           ./test
 
       - name: Test - Sleep
         run: |
-          .\bin\julec --compiler clang -o test tests/sleep
+          .\bin\julec build --compiler clang -o test tests/sleep
           ./test
 
       - name: Test - Syntax
         run: |
-          .\bin\julec --compiler clang -o test tests/syntax
+          .\bin\julec build --compiler clang -o test tests/syntax
           ./test
 
       - name: Test - Traits
         run: |
-          .\bin\julec --compiler clang -o test tests/traits
+          .\bin\julec build --compiler clang -o test tests/traits
           ./test
 
       - name: Test - Wrap Around
         run: |
-          .\bin\julec --compiler clang -po test tests/wraparound
+          .\bin\julec build --compiler clang -po test tests/wraparound
           ./test
