--- a/.github/workflows/build_clang_macos.yml
+++ b/.github/workflows/build_clang_macos.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Build JuleC
         run: |
-          julec --compiler clang src/julec
+          julec build --compiler clang src/julec
