--- a/.github/workflows/build_cpp20.yml
+++ b/.github/workflows/build_cpp20.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Build JuleC
         run: |
-          julec --compiler clang --cppstd cpp20 src/julec
+          julec build --compiler clang --cppstd cpp20 src/julec
