--- a/.github/workflows/build_gcc_macos.yml
+++ b/.github/workflows/build_gcc_macos.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Build JuleC
         run: |
-          julec --compiler gcc --compiler-path g++-13 src/julec
+          julec build --compiler gcc --compiler-path g++-13 src/julec
