--- a/.github/workflows/build_gcc_ubuntu.yml
+++ b/.github/workflows/build_gcc_ubuntu.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Build JuleC
         run: |
-          julec --compiler gcc src/julec
+          julec build --compiler gcc src/julec
