--- a/.github/workflows/build_gcc_windows.yml
+++ b/.github/workflows/build_gcc_windows.yml
@@ -14,5 +14,5 @@ jobs:
 
       - name: Build JuleC
         run: |
-          .\bin\julec -t --compiler gcc src/julec
+          .\bin\julec build -t --compiler gcc src/julec
           g++ "-Wa,-mbig-obj" -w --std=c++17 -fwrapv -ffloat-store -fno-fast-math -fno-rounding-math -ffp-contract=fast -fomit-frame-pointer -fno-strict-aliasing -o test.exe dist/ir.cpp -lws2_32 -lshell32 -liphlpapi -lsynchronization
