std/testing/iotest: initialize

--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -152,6 +152,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/sync/test
           ./test
 
+      - name: Test - std/testing/iotest
+        run: |
+          .\bin\julec test --compiler clang -o test std/testing/iotest
+          ./test
+
       - name: Test - std/time
         run: |
           .\bin\julec test --compiler clang -o test std/time/test
