--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -143,6 +143,11 @@ jobs:
           julec test --compiler gcc -o test std/sync/test
           ./test
 
+      - name: Test - std/testing/iotest
+        run: |
+          julec test --compiler gcc -o test std/testing/iotest
+          ./test
+
       - name: Test - std/time
         run: |
           julec test --compiler gcc -o test std/time/test
