--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -148,6 +148,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/sync/test
           ./test
 
+      - name: Test - std/testing/iotest
+        run: |
+          .\bin\julec test --compiler gcc -o test std/testing/iotest
+          ./test
+
       - name: Test - std/time
         run: |
           .\bin\julec test --compiler gcc -o test std/time/test
