--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -147,6 +147,11 @@ jobs:
           julec test --compiler clang -o test std/sync/test
           ./test
 
+      - name: Test - std/testing/iotest
+        run: |
+          julec test --compiler clang -o test std/testing/iotest
+          ./test
+
       - name: Test - std/time
         run: |
           julec test --compiler clang -o test std/time/test
